# VolumeSculptor

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  cow.vdb  grids.vdb  main.cpp  new_grids.vdb  octree.cpp  requirements.sh  requirements.txt  script.sh  setup.sh  ted.vdb  trial.cpp
docs/: Doxyfile
openVDB/: Makefile  levelset  levelset.cpp  libopenvdb.so.3.1.0
src/: ImplicitPolyDataDistance.h  SDT_Octree.h  SDT_contour.h  implicit_sphere.cpp  implicit_sphere.h  levelset.cpp  main.cpp  marching_sample.h  marchingsample.cpp  octree_2.cpp  octree_2.h  octree_3D.cpp  octree_3D.h  octree_marchingcubes.cpp  octree_render.cpp  octree_render.h
window/: Makefile  main  main.cpp
